--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1,7 +1,3 @@
-body{
-
-}
-
 .container{
     max-width: $respons-xs;
     margin: 0 auto;
@@ -15,5 +11,36 @@ body{
     }
     @media (min-width: $respons-xl) {
         width: $respons-xl;
+    }
+}
+
+@mixin hover($color){
+    &:hover{
+        background-color: $color;
+    }
+}
+
+.btn{
+    outline: none;
+    border: 0;
+    background-color: transparent;
+    padding: 5px 10px;
+    font-size: inherit;
+    border-radius: 4px;
+    display: inline-block;
+    transition: all .3s;
+    cursor: pointer;
+    &__default{
+        border: 1px solid $gray;
+        @include hover($light-gray)
+    }
+    &__primary{
+        border: 1px solid darken($primary, 10%);
+        background-color: $primary;
+        color: #fff;
+    }
+    &__sm{
+        padding: 3px 6px;
+        font-size: .7em;
     }
 }
