--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,6 +1,6 @@
 .header{
     min-height: 100px;
-    background-color: $header_bg;
-    margin-bottom: 50px;
+    background-color: $header-bg;
+    margin-bottom: 20px;
     box-shadow:  0 0 10px rgba(0,0,0,.5);
 }
