--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -1,19 +1,3 @@
-.container{
-    max-width: $respons-xs;
-    margin: 0 auto;
-    padding: 0 15px;
-    @media (min-width: $respons-md) {
-        width: $respons-md;
-        max-width: 100%;
-    }
-    @media (min-width: $respons-lg) {
-        width: $respons-lg;
-    }
-    @media (min-width: $respons-xl) {
-        width: $respons-xl;
-    }
-}
-
 @mixin hover($color){
     &:hover{
         background-color: $color;
@@ -38,6 +22,7 @@
         border: 1px solid darken($primary, 10%);
         background-color: $primary;
         color: #fff;
+        @include hover(lighten($primary, 10%));
     }
     &__sm{
         padding: 3px 6px;
