--- a/src/sass/plugins/_calendar.scss
+++ b/src/sass/plugins/_calendar.scss
@@ -2,6 +2,7 @@
     &__table{
         .table{
             width: 100%;
+            position: relative;
             display: flex;
             flex-direction: column;
             border: 1px solid $table_border;
@@ -16,11 +17,31 @@
                 padding: 15px;
                 cursor: pointer;
                 transition: all .3s;
+                position: relative;
+                p{
+                    margin-bottom: 10px;
+                }
+                >span{
+                    position: absolute;
+                    left: 0;
+                    right: 0;
+                    top: 0;
+                    bottom: 0;
+                }
                 &.active{
                     background-color: darken($light_gray, 5%);
+                    .date{
+                        font-weight: bold;
+                    }
                 }
                 &:hover:not(.table__cell_empty){
                     background-color: $light_gray;
+                }
+                &.event{
+                    background-color: lighten($blue, 50%);
+                    &:hover{
+                        background-color: lighten($blue, 60%);
+                    }
                 }
                 &_empty{
                     background-color: lighten($gray, 5%);
