--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -6,7 +6,7 @@
 @import "components/index";
 
 /* plugins */
-@import "plugins/calendar";
+@import "components/calendar";
 
 /* blocks */
 @import "blocks/base";
