--- a/src/sass/components/_forms.scss
+++ b/src/sass/components/_forms.scss
@@ -12,5 +12,8 @@
         box-shadow: inset 0 1px 3px rgba(0,0,0,.3);
         outline: none;
         border: 1px solid $gray;
+        &.error{
+            border: 2px solid red;
+        }
     }
 }
